--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper clearfix">
 
-        <h1>Hi</h1>
+        <h1>Hi my name is fork</h1>
     </div>
     
     <script src="main.js"></script>
