--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <div class="wrapper clearfix">
 
-        <h1>Hi my name is fork</h1>
+        <h1 class="welcome-note">Hey There!</h1>
+        <p>Le me introduce you to my world</p>
     </div>
     
     <script src="main.js"></script>
