--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <body>
     <div id="root"></div>
     
-    <script src="app.bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
